# aces4

./: .gitignore  CMakeLists.txt  Makefile.am  README.md
aces/src/sialx/cc/: ccsd_uhf.sialx  ccsd_uhf_vars.sialx  diis_4index_ccsd_uhf.sialx  lambda_uhf.sialx  mp2_rhf_disc.sialx  rccsd_rhf.sialx  rlambda_rhf.sialx
aces/src/sialx/cc_deriv/: ccsd_1grad_rhf.sialx  ccsd_1grad_rhf_vars.sialx  ccsd_1grad_uhf.sialx  ccsd_1grad_uhf_vars.sialx  ccsd_2grad_rhf.sialx  ccsd_2grad_rhf_vars.sialx  ccsd_2grad_uhf.sialx  ccsd_2grad_uhf_vars.sialx  ccsdgrad_rhf_defs.sialx
aces/src/sialx/eom/: cis_uhf.sialx.skip  cis_uhf_defs.sialx
aces/src/sialx/mbpt/: mp2_rhf_defs.sialx  mp2_rhf_disc.sialx
aces/src/sialx/mbpt_deriv/: diis_2index_mp2grad_rhf.sialx  diis_2index_mp2grad_uhf.sialx  mp2grad_rhf.sialx  mp2grad_rhf_vars.sialx  mp2grad_uhf.sialx
aces/src/sialx/scf/: diis_4index_rhf.sialx  hfstability_uhf.sialx  hfstability_uhf_defs.sialx  scf_rhf.sialx  scf_uhf.sialx
aces/src/sialx/scf_deriv/: scf_grad_ru_hf_defs.sialx  scf_hess_uhf.sialx  scf_hess_uhf_defs.sialx
aces/src/sialx/utility/: tran_rhf_no3v.sialx  tran_rhf_no4v.sialx  tran_uhf_no4v.sialx
aces/src/super_instructions/: CMakeLists.txt  special_instructions.cpp
aces/src/super_instructions/direct_integral/: compute_integral_batch.F  compute_nn_repulsion.F  compute_return_1el_gradient.F  compute_return_1el_grdints.F  compute_return_2el_grdints.F  compute_ubatch1.F  compute_ubatch3.F  compute_ubatch4.F  compute_ubatch6.F  compute_ubatch7.F  compute_ubatch8.F  compute_uintegrals8.F  move_integrals.f  return_1el_gradient.F  return_1el_grdints.F  return_2el_gradient.F
aces/src/super_instructions/excited/: .a4_xgeev.F.swp  a4_1hp_guess.F  a4_reord_eigs.F  a4_return_select.F  a4_select_max.F
aces/src/super_instructions/qm-generic/: a4_apply_denominator.F
aces/src/super_instructions/utility/: a4_print_static.F  a4_xgeev.F
aces/test/: test_basic_qm.cpp  test_qm.cpp  test_qm_aux.cpp  test_qm_frag.cpp
sia/src/core/: array_constants.h  sia_log.cpp  sia_log.h  sip.h
sia/src/cuda/: gpu_super_instructions.h
sia/src/dynamic_data/: block.h
sia/src/main/: main.cpp
sia/src/mpi/: async_acks.h
sia/src/sialx/test/: contiguous_local.sialx
sia/src/static_data/: array_table.h  op_table.h
sia/src/super_instructions/: CMakeLists.txt
sia/src/super_instructions/general/: check_block_number_calculation.cpp
sia/src/worker/: fragment_loop_manager.h  interpreter.cpp  loop_manager.h
sia/test/: test_basic_sial.cpp  test_constants.cpp  test_controller.cpp  test_sial.cpp
src/sialx/qm/: .ccsd_1grad_rhf_vars.sialx.swp  .ccsd_2grad_uhf.sialx.swp  .mp2_uhf.sialx.swp  ccsd_1grad_rhf.sialx  ccsd_1grad_rhf_vars.sialx  ccsd_1grad_uhf.sialx  ccsd_1grad_uhf_vars.sialx  ccsd_2grad_rhf.sialx  ccsd_2grad_rhf_vars.sialx  ccsd_2grad_uhf.sialx  ccsd_2grad_uhf_vars.sialx  ccsd_uhf.sialx  ccsd_uhf_defs.sialx  ccsdgrad_uhf_defs.sialx  diis_2index_ccgrad_rhf.sialx  diis_2index_ccgrad_uhf.sialx  diis_2index_mp2grad_rhf.sialx  diis_2index_mp2grad_uhf.sialx  diis_2index_rhf.sialx  diis_2index_uhf.sialx  diis_4index_ccsd_uhf.sialx  diis_4index_lambda_uhf.sialx  diis_4index_uhf.sialx  lambda_uhf.sialx  lambda_uhf_defs.sialx  lambda_uhf_vars.sialx  mp2_rhf_disc.sialx  mp2_uhf.sialx  mp2_uhf_defs.sialx  mp2grad_rhf.sialx  mp2grad_rhf_defs.sialx  mp2grad_rhf_vars.sialx  mp2grad_uhf.sialx  mp2grad_uhf_defs.sialx  mp2grad_uhf_vars.sialx  scf_grad_ru_hf.sialx  scf_rhf.sialx  tran_uhf_no4v.sialx
src/sialx/test/: test_diag.sialx  test_diag_defs.sialx  test_diag_vars.sialx  test_do_diag.sialx
src/sip/super_instructions/: CMakeLists.txt  Makefile.am  special_instructions.cpp
src/sip/super_instructions/qm/direct_integral/: compute_return_1el_gradient.F  compute_return_2el_grdints.F  return_2el_grdints.F  return_2el_hessian.F
src/sip/super_instructions/qm/qm-generic/: do_diis,F  do_diis.F  energy_denominator.F  energy_udenominator.F
src/sip/super_instructions/qm/utility/: compute_diis.F  form_R.F
stash/: Makefile.am
